2015-08-06  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * progs/mincstats/mincstats.c: Incorporate Claude's suggested changes to
	the otsu_threshold() function.
   * {various}: Corrected many warnings.

2015-08-06  Andrew Janke <a.janke@gmail.com>
   * progs/mincstats/mincstats.man1: Add documentation of new command line
	options.

2015-08-05  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * progs/mincstats/mincstats.c: Add -skewness and -kurtosis options.

2015-07-09  Robert D. Vincent <robert.d.vincent@mcgill.ca>
    * Testing/{mincstats-test.pl, mincinfo-test.pl}: Added test scripts for
	mincstats and mincinfo.

2015-06-26  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * progs/mincstats/mincstats.c: Fix potential memory error and removed some warnings.
   * conversion/dcm2mnc/*: Many changes to improve robustness of DICOM conversion.
   * conversion/nifti1/mnc2nii.c: Use new restructure_array() and restructure.h.
   * progs/mincmorph/*: Fix a number of memory issues and odd use
	of pointers.
   * progs/mincconvert/mincconvert.c: Allow conversion from MINC2 to MINC2.
   * mincextract.c, mincreshape.c, rawtominc.c: Use new ParseLong() function
	rather than strtol() to avoid interpreting numbers with leading zeros
	in octal.
   * Testing/: added tests for mincreshape, mincresample, minccalc, and
	mincaverage.
   * conversion/nifti1/: Moved nifti1_io.c, znzlib.c and headers to libminc.
   * progs/mincresample/mincresample.c: Warn before doing incorrect things
	with non-monotonic irregular dimensions.
   * progs/minccmp/minccmp.c: Add support for confusion matrix statistics
	(e.g. Dice statistics) with discrete volumes.
   * progs/mincdump/mincdump.c: Expand legal character set in text, fix usage
	message.
   * progs/mincresample/resample_volumes.c: Fix issue with -keep_real_range
	(see Github issue #21).
   * conversion/nifti1/mnc2nii.c: Fix a number of bugs.
   * progs/mincextract/mincextract.c, progs/minctoraw/minctoraw.c: Provide for